FIX(Style): z-index of SearchBar

--- a/src/shared/SearchBar/SearchBar.css
+++ b/src/shared/SearchBar/SearchBar.css
@@ -10,6 +10,7 @@
   background-color: #313846;
   border-radius: 16px;
   gap: 0.1rem;
+  z-index: 999;
 }
 
 .search-bar input {
